# WebDavPlay

./: README.md  justfile  manage.py  pyproject.toml
.devcontainer/: .gitignore  .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml
docker/: docker-compose.services.yml
webdav/: asgi.py  authentication.py  exceptions.py  serializer_fields.py  services.py  settings.py  urls.py  utils.py  wsgi.py
webdav/accounts/: apps.py  controllers.py  exceptions.py  serializers.py  services.py  views.py
webdav/contacts/: apps.py  controllers.py  models.py  serializers.py  views.py
webdav/contacts/migrations/: 0001_initial.py
